iptables
# Generated by iptables-save v1.4.21 on Tue Aug 30 18:04:59 2022
*filter
:INPUT DROP [2:84]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:SIP - [0:0]
:f2b-asterisk-tcp - [0:0]
:f2b-asterisk-udp - [0:0]
:f2b-sshd - [0:0]
-A INPUT -p tcp -m tcp --dport 10050 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -p udp -m multiport --dports 5060,5061,5038 -j f2b-asterisk-udp
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 45022 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 5060:5069 -j SIP
-A INPUT -i eth0 -p udp -m udp --dport 10000:20000 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -m state --state INVALID -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A SIP -p udp -m udp -m string --string "sipcli" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "friendly-scanner" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "VaxSIPUserAgent" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "sip-scan" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "iWar" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "sipvicious" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "sipsak" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "sundayddr" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "Linksys/SPA942" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "pplsip" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -m string --string "VoIP SIP v11.0.0" --algo bm --to 65535 -j DROP
-A SIP -p udp -m udp -j ACCEPT
-A f2b-asterisk-tcp -s 217.14.254.178/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-asterisk-tcp -j RETURN
-A f2b-asterisk-udp -s 217.14.254.178/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-asterisk-udp -j RETURN
-A f2b-sshd -j RETURN
COMMIT
# Completed on Tue Aug 30 18:04:59 2022
# Generated by iptables-save v1.4.21 on Tue Aug 30 18:04:59 2022
*nat
:PREROUTING ACCEPT [323706:88593849]
:INPUT ACCEPT [150087:80164030]
:OUTPUT ACCEPT [101648:6190731]
:POSTROUTING ACCEPT [101643:6187699]
COMMIT
# Completed on Tue Aug 30 18:04:59 2022
# Generated by iptables-save v1.4.21 on Tue Aug 30 18:04:59 2022
*mangle
:PREROUTING ACCEPT [32604515:17405752358]
:INPUT ACCEPT [32604459:17405747123]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [32428945:17207275177]
:POSTROUTING ACCEPT [32428940:17207272145]
COMMIT
# Completed on Tue Aug 30 18:04:59 2022
